# sdl3-bindgen

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
sdl3-build/: Cargo.toml
sdl3-build/src/: compile.rs  generate.rs  lib.rs
sdl3-gfx-sys/: Cargo.toml  build.rs  wrapper.h
sdl3-image-sys/: Cargo.toml  build.rs  wrapper.h
sdl3-sys/: Cargo.toml  build.rs  wrapper.h
sdl3-ttf-sys/: Cargo.toml  build.rs  wrapper.h
